deprecated Locale creation fixed